tests/NormalTests/paczka1/small_fuzzy/59386918.err
Error in line 7: fkR S673 27,0
Error in line 11: fkR A514 7i,2
